<resources>

    <!--Game Names -->

    <!--Current String gia default otan exoume kainourio game-->
    <string name="DefaultName">Νέο Παιχνίδι</string>

    <string name="Rock">Πέτρα Ψαλίδι Χαρτί</string>
    <string name="Calcution">Παιχνίδι Αριθμών</string>
    <string name="MemoryMatrix">Πίνακας Μνήμης</string>
    <string name="ObjectSelector">Επιλογή Αντικειμένων</string>
    <string name="OrderGame">Παιχνίδι Παραγγελιών</string>
    <string name="Suitcase">Κλείσιμο Βαλίτσας</string>
    <string name="ShadowGame">Παιχνίδι Σκιών</string>
    <string name="PersonPickGame">Συνδυασμοί Ρούχων</string>
    <string name="SoundWord">Παιχνίδι Φθόγγων</string>
    <string name="SoundImage">Ηχος - Εικόνα</string>


    <!--Register-->
    <string name="app_name">Serious Games</string>
    <string name="nickname">Όνομα Χρήστη</string>
    <string name="birthdate">Ημερομηνία Γέννησης</string>
    <string name="gender">Φύλο</string>
    <string name="genderLand">Φύλο       :</string>

    <string name="radioM">Άνδρας</string>
    <string name="radioF">Γυναίκα</string>
    <string name="register">Δημιουργία</string>
    <string name="logRegister">Δημιουργία Νέου Λογαριασμού</string>

    <!-- education-->
    <string name="education">Εκπαίδευση</string>
    <string name="kamia">Καμία</string>
    <string name="dimotiko">Δημοτικό</string>
    <string name="gimnasio">Γυμνάσιο</string>
    <string name="likio">Λύκειο</string>
    <string name="panep">Πανεπιστήμιο</string>


    <!--Login-->
    <string name="login">Σύνδεση</string>
    <string name="Lnickname">Όνομα Χρήστη</string>


    <!--settings-->
    <string name="settings">Ρυθμίσεις</string>
    <string name="gamesSettings">Παιχνίδια</string>
    <string name="statistics">Στατιστικά %1$s</string>
    <string name="statisticsMenu">Στατιστικά</string>
    <string name="home">Αρχική</string>
    <string name="info">Πληροφορίες</string>
    <string name="logout">Αποσύνδεση</string>
    <string name="profile">Προφίλ</string>
    <string name="questionnaire">Αξιολόγηση</string>
    <string name="export">Εξαγωγή Στατιστικών</string>


    <!--labels-->
    <string name="difficultyLabel">Δυσκολία</string>

    <string name="all"><big>\nΌλα τα επίπεδα\n</big></string>
    <string name="easy"><big>\nΕύκολο\n</big></string>
    <string name="medium"><big>\nΜεσαίο\n</big></string>
    <string name="advanced"><big>\nΠροχωρημένο\n</big></string>
    <string name="easy_medium"><big>\nΕύκολο έως Μεσαίο\n</big></string>


    <!--values-->
    <string name="difficultyKey" translatable="false">Difficulty</string>

    <string name="allValue" translatable="false">ALL</string>
    <string name="easyValue" translatable="false">EASY</string>
    <string name="mediumValue" translatable="false">MEDIUM</string>
    <string name="advancedValue" translatable="false">ADVANCED</string>
    <string name="easymediumValue" translatable="false">EASYtoMEDIUM</string>

    <!--General Messages-->
    <string name="win">Σωστά!</string>
    <string name="win1">Μπράβο!</string>
    <string name="win2">Εξαιρετικά!</string>
    <string name="lose">Δεν πειράζει, συνέχισε την προσπάθεια!</string>
    <string name="nextRound">Επόμενος γύρος σε: \u0020</string>
    <string name="timeFinish">Τέλος Χρόνου</string>


    <!--RockPaperScissors Activity -->

    <string name="Time">Χρόνος</string>
    <string name="Result">Αποτέλεσμα</string>
    <string name="Rounds">Γύροι</string>
    <string name="Question">Ερώτηση</string>
    <string name="Start">Έναρξη Παιχνιδιού</string>
    <string name="StartN">Έναρξη \n Παιχνιδιού</string>
    <string name="AdvancedTimer">Advanced Timer</string>
    <string name="WinMode">Ποιο αντικείμενο νικά;</string>
    <string name="LoseMode">Ποιο αντικείμενο χάνει;</string>
    <string name="TimeOut">Ο χρόνος του γύρου τελείωσε!</string>


    <!--SCALING GAME STRINGS-->
    <string name="equal">ΙΣΗ</string>
    <string name="greater">Μεγαλύτερη</string>
    <string name="less">Μικρότερη</string>

    <string name="label">Επέλεξε ποιά πλευρά είναι μεγαλύτερη ή αν είναι ίσες.</string>


    <!--RockPaperScissors Activity -->
    <string name="bucketInstructions">"Τοποθέτησε τα αντικείμενα στα κουτιά"</string>


    <!--STATISTICS-->
    <string name="gameName">Παιχνίδι</string>
    <string name="hit">Επιτυχίες</string>
    <string name="miss">Αστοχίες</string>
    <string name="playTotalTime">Διάρκεια</string>
    <string name="score">Πόντοι</string>
    <string name="days">Μέρες</string>
    <string name="responseTime">Χρόνος Απόκρισης</string>
    <string name="accuracy">Ευστοχία</string>
    <string name="quits">Έξοδοι</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="title">Τίτλος</string>
    <string name="description">Περιγραφή</string>
    <string name="imageDesc">imageDesc</string>


    <string name="ok">Συνέχεια</string>



    <!--OG-->
    <string name="MissingObjects">Λείπουν Αντικείμενα</string>
    <string name="textQuestionOG">Ποια αντικείμενα ήταν στην αρχική παραγγελία;</string>

    <!--congrats msg-->
    <string name="bronze">Καλή προσπάθεια, μπορείς και καλύτερα! </string>
    <string name="silver">Μπράβο!! Συνέχισε έτσι! </string>
    <string name="gold">Συγχαρητήρια!!! Είσαι από τους καλύτερους! </string>

    <!-- bars activity-->
    <string name="BarChart">Ραβδόγραμμα Χρόνου</string>
    <string name="SecPerGame">Λεπτά της ώρας / Παιχνίδι</string>

    <!-- questionnaire-->
    <string name="agree">Συμφωνώ \nαπολύτως</string>
    <string name="disagree">Διαφωνώ \nαπολύτως</string>
    <string name="next">Επόμενη Ερώτηση</string>
    <string name="complete">Oλοκλήρωση</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="question_one">Νομίζω ότι θα ήθελα να χρησιμοποιώ αυτά τα παιχνίδια συχνά</string>
    <string name="question_two">Βρήκα αυτά τα παιχνίδια αδικαιολόγητα περίπλοκα</string>
    <string name="question_three">Σκέφτηκα ότι αυτά τα παιχνίδια ήταν εύκολα στη χρήση</string>
    <string name="question_four">Νομίζω ότι θα χρειαστώ βοήθεια από κάποιον ειδικό για να μπορέσω να χρησιμοποιήσω αυτά τα παιχνίδια</string>
    <string name="question_five">Βρήκα τις διάφορες λειτουργίες σ’ αυτά τα παιχνίδια καλά ενσωματωμένες</string>
    <string name="question_six">Σκέφτηκα ότι υπήρχε μεγάλη ασυνέπεια στη λειτουργία των παιχνιδιών </string>
    <string name="question_seven">Φαντάζομαι ότι οι περισσότεροι άνθρωποι θα μάθουν να χρησιμοποιούν αυτά τα παιχνίδια πολύ γρήγορα</string>
    <string name="question_eight">Βρήκα αυτά τα παιχνίδια πολύ δύσκολα/περίπλοκα στη χρήση</string>
    <string name="question_nine">Ένιωσα πολύ σίγουρος/η χρησιμοποιώντας αυτά τα παιχνίδια</string>
    <string name="question_ten">Χρειάστηκε να μάθω πολλά πράγματα πριν να μπορέσω να ξεκινήσω με αυτά τα παιχνίδια</string>

    <!-- Tutorials-->
    <string name="NotAgain">Απενεργοποίηση Οδηγιών</string>


</resources>
