<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:id="@+id/grp4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/baseline_home_black_18dp"
            android:title="@string/home" />
    </group>
    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/profile"
            android:icon="@drawable/baseline_perm_identity_black_18dp"
            android:title="@string/profile" />
    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/baseline_poll_black_18dp"
            android:title="@string/statisticsMenu" />
    </group>

    <group
        android:id="@+id/grp3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_black_18dp"
            android:title="@string/settings" />
    </group>

    <group
        android:id="@+id/grp7"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/chart_bar"
            android:title="@string/BarChart" />
    </group>

    <group
        android:id="@+id/grp8"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_questionnaire"
            android:icon="@drawable/baseline_feedback_black_24dp"
            android:title="@string/questionnaire" />
    </group>

    <group
        android:id="@+id/grp5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/baseline_info_black_24dp"
            android:title="@string/info" />
    </group>



    <group
        android:id="@+id/grp6"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logouticon"
            android:title="@string/logout" />
    </group>


</menu>