<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <SwitchPreferenceCompat
        app:key="notifications"
        app:title="Enable message notifications" />

    <Preference
        app:key="feedback"
        app:summary="Report technical issues or suggest new features"
        app:title="Send feedback" />
    <PreferenceCategory android:title="@string/settings">
    <ListPreference
        android:defaultValue="@string/mediumValue"
        android:entries="@array/difficulty_options"
        android:entryValues="@array/difficulty_values"
        android:key="@string/difficultyKey"
        android:title="@string/difficultyLabel"/>
    </PreferenceCategory>



</PreferenceScreen>