<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/questionOne"
    tools:context=".Questionnaire">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:minHeight="200dp"
        app:cardBackgroundColor="@color/statisticColor"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bodyQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Qround"
                android:text="2 / 10 "
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_margin="14dp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Qquestion"
                android:text="@string/question_two"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_margin="14dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/Qround"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/buttonsQ"
                app:layout_constraintTop_toBottomOf="@id/Qquestion"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textsQ">


                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="80dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp"
                    android:id="@+id/firstB"
                    android:textColor="@color/black"
                    android:text="@string/one"
                    android:textSize="20sp"
                    android:layout_margin="16dp"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="80dp"
                    android:id="@+id/secB"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp"
                    android:textColor="@color/black"
                    android:text="@string/two"
                    android:textSize="20sp"
                    android:layout_margin="16dp"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="80dp"
                    android:id="@+id/thirdB"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp"
                    android:textColor="@color/black"
                    android:text="@string/three"
                    android:textSize="20sp"
                    android:layout_margin="16dp"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="80dp"
                    android:id="@+id/fourthB"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp"
                    android:textColor="@color/black"
                    android:text="@string/four"
                    android:textSize="20sp"
                    android:layout_margin="16dp"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="80dp"
                    android:id="@+id/fifthB"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp"
                    android:textColor="@color/black"
                    android:text="@string/five"
                    android:textSize="20sp"
                    android:layout_margin="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/textsQ"
                app:layout_constraintTop_toBottomOf="@id/buttonsQ"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/nextQ">

                <TextView
                    android:layout_margin="12dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/disagree"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_margin="12dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/agree"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>




            </LinearLayout>




            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp"
                android:text="@string/next"
                android:textSize="20sp"
                android:textColor="@color/rednext"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/nextQ"
                app:layout_constraintTop_toBottomOf="@id/textsQ"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="8dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</LinearLayout>